--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,3 @@
 project('cracking-the-coding-interview', 'cpp')
 
-include_dir = include_directories('chap_4')
-src = ['code_runner.cpp']
-
-executable('ctci', src, 
-    include_directories : include_dir)
-
+subdir('chap_10')
